assets/css/styles.css
/* ... */
/*@media screen and (min-width: 768px) {*/
/*  .services__container {*/
/*    grid-template-columns: repeat(2, 250px);*/
/*  }*/

/*  .services__container {*/
/*    grid-template-columns: repeat(2, 350px);*/
/*  }*/

/*}*/

/* For large devices */
@media screen and (min-width: 1150px) {
  .container {
    margin-inline: auto;
  }

  .section {
    padding-block: 7rem 2rem;
  }

  .section__title-1::after,
  .section__title-2::after {
    width: 70px;
    height: 48px;
  }

  .geometric-box {
    transform: scale(1.2);
  }

  .nav {
    height: calc(var(--header-height) + 2rem);
    column-gap: 4rem;
  }

  .nav__close,
  .nav__toggle,
  .nav__title,
  .nav__name {
    display: none;
  }

  .nav__list {
    flex-direction: row;
    column-gap: 4rem;
  }

  .nav__menu {
    margin-left: auto;
  }

  .nav__link {
    color: var(--text-color);
    font-size: var(--normal-font-size);
  }

  .nav__link:hover {
    color: var(--title-color);
  }

  .nav__link::after {
    background-color: var(--title-color);
  }

  .active-link {
    color: var(--title-color);
  }

  .nav__link-button {
    background-color: var(--black-color);
    color: var(--white-color);
    padding: 1.1rem 1.5rem;
  }

  .nav__link-button:hover {
    color: var(--white-color);
  }

  .nav__link-button::after {
    background-color: transparent;
  }

  .change-theme {
    color: var(--text-color);
  }

  .change-theme:hover {
    color: var(--title-color);
  }

  .home__container {
    grid-template-columns: repeat(2, 460px);
    gap: 2rem 4rem;
    align-items: center;
    padding-block: 5.5rem;
  }

  .home__perfil {
    grid-column: 2 / 3;
    grid-row: 1 / 3;
  }

  .home__image {
    width: 350px;
  }

  .home__shadow {
    right: -1.25rem;
    bottom: -1.25rem;
    border: 6px solid var(--black-color)
  }

  .home__name,
  .home__description {
    text-align: initial;
  }

  .home__name {
    align-self: flex-end;
  }

  .home__info {
    margin-top: 0;
    align-self: flex-start;
  }

  .home__description {
    position: relative;
    font-size: var(--h2-font-size);
    margin-bottom: 5.5rem;
    padding-left: 3rem;
  }

  .home__description::after {
    content: '';
    width: 32px;
    height: 2px;
    background-color: var(--title-color);
    position: absolute;
    left: 0;
    top: 14px;
  }

  .home__scroll {
    margin: 0;
    display: flex;
    align-items: center;
    column-gap: .75rem;
  }

  .home__scroll-text {
    display: block;
    color: var(--text-color);
    font-size: var(--smaller-font-size);
    font-weight: var(--font-medium);
  }

  .home__scroll-box {
    width: 44px;
    height: 44px;
  }

  .home__scroll-box i {
    font-size: 1.25rem;
  }

  .home__perfil .geometric-box {
    top: 15rem;
  }

  .home__arrow {
    top: 4.5rem;
    left: -8rem;
    rotate: 80deg;
    width: 80px;
  }

  .home__line {
    left: -15rem;
    bottom: 4rem;
    width: 80px;
    rotate: 30deg;
  }

  .home__social {
    left: initial;
    right: -6rem;
  }

  .home__social-link {
    font-size: 1.5rem;
    padding: .5rem;
  }

  .about__container {
    grid-template-columns: 440px 525px;
    gap: 1rem 9rem;
    padding-block: 1rem;
  }

  .about__perfil {
    order: -1;
    grid-row: 1 / 3;
  }

  .about__image {
    width: 350px;
  }

  .about__img {
    border: 8px solid var(--white-color);
  }

  .about__shadow {
    width: 240px;
    height: 615px;
    top: -4.5rem;
    right: -5.5rem;
    border-bottom: 6px solid var(--first-color);
  }

  .about__perfil .geometric-box {
    right: -4rem;
    top: 4.5rem;
  }

  .about_line {
    width: 80px;
    right: -2rem;
    top: 10rem;
  }

  .about__box {
    width: 64px;
    height: 64px;
    right: -.75rem;
  }

  .about__container .section__title-1 {
    align-self: flex-end;
    margin-inline: 0;
  }

  .about__info {
    align-self: flex-start;
    padding-left: 3rem;
  }

  .about__description {
    font-size: var(--h2-font-size);
    margin-bottom: 2rem;
  }

  .about__description::after {
    width: 32px;
    height: 2px;
    left: -3rem;
    top: 14px;
  }

  .about__list {
    margin-bottom: 5rem;
  }

  .about__buttons {
    justify-content: initial;
  }

  .button__ghost {
    padding: .75rem;
  }

  .button__ghost i {
    font-size: 1.5rem;
  }

  .services__container {
    grid-template-columns: repeat(3, 282px);
    column-gap: 5rem;
    padding-block: 3rem 5rem;
  }

  .services__card



}

